--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
         max-size: 1m
 
   minecraft:
-    image: openjdk:8u322
+    image: openjdk:8-jre@sha256:d005095f6b9c9f2d03f75942c5e389c34a765d7f53eed3c6b0c7b7317c8a98c7
     hostname: minecraft
     container_name: minecraft_nsvr__minecraft
     stdin_open: true
@@ -205,6 +205,9 @@ services:
       resources:
         limits:
           memory: 128m
+
+    healthcheck:
+      disable: true
 
     logging:
       driver: json-file
